--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">F1Trivia</string>
     <string name="default_web_client_id">195613838280-4r5lfehmf8cni8ftbnkn89mpp91m0vg8.apps.googleusercontent.com</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="settings">settings</string>
+    <string name="leaderboard">leaderboard</string>
 </resources>
