Update main menu layout and add string resource for play button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="settings">settings</string>
     <string name="leaderboard">leaderboard</string>
+    <string name="play">Play</string>
 </resources>
